Fixed color contrast issues found in developer tools with black text.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -20,7 +20,6 @@
 .headernav a{  
     flex: 1 1 auto;
     padding-right: 10px;
-    width:80px;
     text-align: center;
     text-decoration: none;
 }
@@ -65,7 +64,7 @@ nav ul li a {
 
 h1, h2 {
     font-family: 'Henny Penny', Georgia, serif;
-    color: #C1666B;
+    color: black;
     text-align: center;
     padding: 10px;
 }
@@ -78,7 +77,7 @@ h1{
 
 p {
     font-family: 'Roboto', Arial, sans-serif;
-    color: #48A9A6;
+    color: black;
     padding: 10px;
 }
 
